# osscz

./: .editorconfig  .gitignore  3024.toml  CMakeLists.txt  README.md  RELEASING.md  catppuccin-latte.toml  conanfile.py  justfile  sch  scz.toml  version.h.in
.github/workflows/: cmake-single-platform.yml  macos-build.yml
conan2/: default
src/: cmd.cpp  cmd.h  env-expand.cpp  env-expand.h  main.cpp  osscz.cpp  osscz.h  signals.cpp  signals.h  themes.cpp  themes.h  trim.cpp  trim.h
test_package/: conanfile.py
